--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,6 @@
             "email": "lijingping@qq.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {}
 }
