--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,9 @@
     ],
     "minimum-stability": "dev",
     "version": "1.0",
-    "require": {}
+    "require": {
+        "ext-json": "*",
+        "ext-openssl": "*",
+        "php": ">=7.1"
+    }
 }
